# InvokeMetadata

./: .gitignore  pyproject.toml
docs/invokeai_recall_parameters/: RECALL_PARAMETERS_API.md
invoke_metadata/: metadata.py
invoke_metadata/generation/: canvas2metadata.py  common_metadata_elements.py  invoke2metadata.py  invoke3metadata.py  invoke5metadata.py
scripts/: test_png_metadata.py
tests/: test_metadata_parsing.py
tests/example_jsons/: example1.json  example10.json  example11.json  example12.json  example2.json  example3.json  example4.json  example5.json  example6.json  example7.json  example8.json  example9.json
