[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoke-metadata"
version = "0.1.0"
description = "Parse generation metadata from InvokeAI PNG images"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Lincoln Stein"},
]
keywords = ["invokeai", "metadata", "stable-diffusion", "image-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/lstein/InvokeMetadata"
Repository = "https://github.com/lstein/InvokeMetadata"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["invoke_metadata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
